<resources>
    <!--Login Actiivty -->
    <string name="app_name">Whatsapp</string>
    <string name="login_hint">Digite seu nome</string>
    <string name="email_hint">Digite seu e-mail</string>
    <string name="pass_hint">Digite sua senha</string>
    <string name="country_code">+55</string>
    <string name="state_code">31</string>
    <string name="cell_number">998090231</string>
    <string name="btn_cadastrar">cadastrar</string>
    <string name="btn_signin">Logar</string>
    <!--Validation -->
    <string name="str_valid">Validação</string>
    <string name="str_valid_text">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="code_hint">Digite o codigo</string>
    <string name="btn_valid_code">validar</string>
    <!--Login-->
    <string name="without_password">Nao tem conta? Cadastre-se</string>
    <string name="title_activity_user_signup">UserSignupActivity</string>
    <!--menu-->
    <string name="settings_item">Configurações</string>
    <string name="exit_item">Sair</string>
    <string name="search_item">Pesquisar</string>
    <string name="add_user_item">Adicionar</string>

</resources>