<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".activity.MainActivity">

    <item
        android:id="@+id/item_add_user"
        android:icon="@drawable/ic_person_add"
        android:orderInCategory="300"
        android:title="@string/add_user_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_search"
        android:title="@string/search_item"
        android:orderInCategory="301"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_sttings"
        android:title="@string/settings_item"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_exit"
        android:title="@string/exit_item"
        android:orderInCategory="200"
        app:showAsAction="never" />



</menu>