<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="24dp"
    tools:context="com.whatsappandroid.cursoandroid.whatsapp.activity.ValidatorActivity">

    <ImageView
        android:id="@+id/img_wpp_logo"
        android:layout_width="200dp"
        android:layout_height="163dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/txt_valid_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textColor="#FFFFFF"
        android:text="@string/str_valid"
        android:textSize="24dp"
        android:layout_below="@id/img_wpp_logo"/>
    <TextView
        android:id="@+id/txt_valid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:text="@string/str_valid_text"
        android:textSize="12dp"
        android:layout_below="@id/txt_valid_tittle"/>
    <EditText
        android:id="@+id/edt_valid_code"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/code_hint"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@id/txt_valid_text"
        android:layout_marginTop="24dp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btn_valid_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_valid_code"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="54dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/edt_valid_code"/>

</RelativeLayout>
