<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="24dp"
    tools:context="com.whatsappandroid.cursoandroid.whatsapp.activity.LoginActivity">


    <ImageView
        android:id="@+id/img_wpp_logo"
        android:layout_width="200dp"
        android:layout_height="163dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>


    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textEmailAddress"
        android:layout_below="@id/img_wpp_logo"
        android:layout_marginTop="24dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingLeft="9dp"/>

    <EditText
        android:id="@+id/edt_pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textVisiblePassword"
        android:layout_below="@id/edt_email_login"
        android:layout_marginTop="24dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingLeft="9dp"/>

    <Button
        android:id="@+id/btn_signin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signin"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/edt_pass_login"
        android:theme="@style/button"/>

    <TextView
        android:id="@+id/txt_wdout_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/without_password"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/btn_signin_login"
        android:onClick="openUserSignup"/>

</RelativeLayout>