<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="24dp">
    <!--
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
    -->

    <ImageView
        android:id="@+id/img_useradd"
        android:layout_width="150dp"
        android:layout_height="113dp"
        android:src="@drawable/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>


    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textPersonName"
        android:layout_below="@id/img_useradd"
        android:layout_marginTop="44dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingLeft="9dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textEmailAddress"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="24dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingLeft="9dp"/>

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_hint"
        android:textColor="@color/textColorPrimary"
        android:inputType="textVisiblePassword"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="24dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:paddingLeft="9dp"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="54dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/edt_senha"/>


</RelativeLayout>